k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: user-management
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: user-management
spec:
  type: ClusterIP
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 8000
